--- a/pages/sp2021.md
+++ b/pages/sp2021.md
@@ -30,7 +30,7 @@ If you are a sophomore or junior (or outstanding first-year, particularly if the
 1. Who you are (name, major, etc),
 2. Include any visualization work you've done (or visualization skills you know, like d3.js or p5.js),
 3. Include a link to your github so I can nerd out checking out code/projects you've done,
-4. Other things you're involved in (ex: you're also part of ACM / WCS / R|P / etc), and finally
+4. Other things you're involved in (ex: you're also part of ACM / WCS / ReflectionsProjections / etc), and finally
 4. Attach an unofficial transcript so I can know where you are in the CS program and if you've taken any data or visualization-focused courses (ex: CS 467, etc).
 
 Thanks!! :)
